--- a/src/main/resources/eingabe.fxml
+++ b/src/main/resources/eingabe.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -11,89 +13,93 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="EingabeController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="EingabeController">
     <children>
-        <MenuBar layoutX="166.0" layoutY="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                 AnchorPane.topAnchor="0.0">
+        <MenuBar layoutX="166.0" layoutY="89.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close"/>
-                        <MenuItem fx:id="back" mnemonicParsing="false" onAction="#goBack" text="Back"/>
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem fx:id="backMenu" mnemonicParsing="false" onAction="#goBack" text="Back" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Delete"/>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="About"/>
+                        <MenuItem mnemonicParsing="false" text="About" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
-        <GridPane alignment="CENTER" layoutX="348.0" layoutY="183.0" AnchorPane.bottomAnchor="0.0"
-                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+        <GridPane alignment="CENTER" layoutX="348.0" layoutY="183.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2">
                     <children>
-                        <Label fx:id="pnrNameLabel" layoutX="50.0" layoutY="24.0" prefHeight="52.0" prefWidth="251.0"
-                               text="PNRName">
+                        <Label fx:id="pnrNameLabel" layoutX="14.0" layoutY="24.0" prefHeight="52.0" prefWidth="251.0" text="PNRName">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="einzahlungLabel" layoutX="452.0" layoutY="24.0" prefHeight="52.0"
-                               prefWidth="237.0" text="Einzahlung">
+                        <Label fx:id="einzahlungLabel" layoutX="452.0" layoutY="24.0" prefHeight="52.0" prefWidth="237.0" text="Einzahlung">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="gesStandLabel" layoutX="826.0" layoutY="24.0" prefHeight="52.0" prefWidth="265.0"
-                               text="Ges.AktuellerStand">
+                        <Label fx:id="gesStandLabel" layoutX="826.0" layoutY="24.0" prefHeight="52.0" prefWidth="265.0" text="Ges.AktuellerStand">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                     <children>
-                        <Label fx:id="anrNameLabel" layoutX="40.0" layoutY="37.0" prefHeight="52.0" prefWidth="251.0"
-                               text="ANRName">
+                        <Label fx:id="anrNameLabel" layoutX="9.0" layoutY="5.0" prefHeight="132.0" prefWidth="343.0" text="ANRName">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="artLabel" layoutX="40.0" layoutY="89.0" prefHeight="52.0" prefWidth="251.0"
-                               text="Art">
+                        <Label fx:id="artLabel" layoutX="9.0" layoutY="124.0" prefHeight="52.0" prefWidth="180.0" text="Art">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <Label fx:id="strategieLabel" layoutX="40.0" layoutY="149.0" prefHeight="52.0" prefWidth="251.0"
-                               text="Strategie">
+                        <Label fx:id="strategieLabel" layoutX="817.0" layoutY="37.0" prefHeight="52.0" prefWidth="251.0" text="Strategie">
                             <font>
-                                <Font size="30.0"/>
+                                <Font size="30.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="einzahlungField" layoutX="217.0" layoutY="51.0" onAction="#speichern"
-                                   promptText="Einzahlung"/>
-                        <Label fx:id="oldEinzahlungLabel" layoutX="237.0" layoutY="81.0" text="oldEinzahlung"/>
+                        <TextField fx:id="newEinzahlungField" layoutX="360.0" layoutY="54.0" onAction="#speichernEinzahlung" promptText="Einzahlung" />
+                        <Label fx:id="oldEinzahlungLabel" layoutX="360.0" layoutY="84.0" text="Einzahlung:" />
+                  <TextField fx:id="newAnteileField" layoutX="360.0" layoutY="140.0" onAction="#speichernAnteil" promptText="Anteile:" />
+                  <Label fx:id="oldAnteilLabel" layoutX="360.0" layoutY="178.0" text="Anteile" />
+                  <Label fx:id="gesamtEinzahlungLabel" layoutX="593.0" layoutY="58.0" prefHeight="17.0" prefWidth="149.0" text="Gesamteinzahlung:" />
+                  <Label fx:id="gesamtAnteilLabel" layoutX="593.0" layoutY="144.0" prefHeight="17.0" prefWidth="149.0" text="Gesamtanteil:" />
                     </children>
                 </AnchorPane>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
+               <children>
+                  <TextField fx:id="newAktuelllerStandField" layoutX="214.0" layoutY="113.0" onAction="#speichernStand" prefHeight="25.0" prefWidth="161.0" promptText="Aktueller Stand" />
+                  <DatePicker fx:id="datumDatePicker" layoutX="510.0" layoutY="113.0" onAction="#datepick" prefHeight="25.0" prefWidth="199.0" promptText="Datum" />
+                  <Label fx:id="gewinnLabel" layoutX="865.0" layoutY="46.0" prefHeight="17.0" prefWidth="119.0" text="Gewinn:" />
+                  <Label fx:id="renditeLabel" layoutX="865.0" layoutY="117.0" prefHeight="17.0" prefWidth="119.0" text="Rendite:" />
+                  <Button fx:id="uebernehmenButton" layoutX="1180.0" layoutY="258.0" mnemonicParsing="false" onAction="#uebernahme" text="Übernehmen" />
+                  <Button fx:id="zurueckButton" layoutX="1107.0" layoutY="258.0" mnemonicParsing="false" onAction="#goBack" text="Zurück" />
+               </children>
+            </AnchorPane>
             </children>
         </GridPane>
     </children>
