--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -17,107 +17,99 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
    <children>
       <MenuBar AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <menus>
             <Menu mnemonicParsing="false" text="File">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Close"/>
+                  <MenuItem mnemonicParsing="false" text="Close" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Delete"/>
+                  <MenuItem mnemonicParsing="false" text="Delete" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
                <items>
-                  <MenuItem mnemonicParsing="false" text="About"/>
+                  <MenuItem mnemonicParsing="false" text="About" />
                </items>
             </Menu>
          </menus>
       </MenuBar>
-      <GridPane alignment="CENTER" layoutX="185.0" layoutY="108.0" AnchorPane.bottomAnchor="0.0"
-                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
+      <GridPane alignment="CENTER" layoutX="185.0" layoutY="108.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="25.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" prefWidth="250.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="250.0" prefWidth="250.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="300.0" prefWidth="300.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <TextField fx:id="aktuellerStandField" alignment="CENTER" GridPane.rowIndex="1">
                <GridPane.margin>
-                  <Insets left="10.0" right="10.0"/>
+                  <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1"
-                  GridPane.rowIndex="2">
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Button fx:id="okButton" mnemonicParsing="false" text="OK">
                      <HBox.margin>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                      </HBox.margin>
                   </Button>
                   <Button fx:id="changeButton" mnemonicParsing="false" onAction="#openEingabe" text="Ändern">
                      <HBox.margin>
-                        <Insets left="10.0"/>
+                        <Insets left="10.0" />
                      </HBox.margin>
                   </Button>
                </children>
                <opaqueInsets>
-                  <Insets/>
+                  <Insets />
                </opaqueInsets>
                <padding>
-                  <Insets bottom="20.0" right="80.0"/>
+                  <Insets bottom="20.0" right="80.0" />
                </padding>
             </HBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <ComboBox fx:id="portfolio" onAction="#portfolioEnter" prefWidth="150.0">
+                  <ComboBox fx:id="portfolioComboBox" onAction="#portfolioEnter" prefWidth="150.0">
                      <VBox.margin>
-                        <Insets bottom="10.0"/>
+                        <Insets bottom="10.0" />
                      </VBox.margin>
                   </ComboBox>
-                  <ProgressBar fx:id="progressBar" accessibleText="Datenbank verbindung" prefHeight="20.0"
-                               prefWidth="186.0" progress="0.0">
+                  <ProgressBar fx:id="progressBar" accessibleText="Datenbank verbindung" prefHeight="20.0" prefWidth="186.0" progress="0.0">
                      <VBox.margin>
-                        <Insets top="10.0"/>
+                        <Insets top="10.0" />
                      </VBox.margin>
                   </ProgressBar>
                </children>
             </VBox>
             <VBox alignment="CENTER" GridPane.rowIndex="2">
                <children>
-                  <Label fx:id="renditeLabel" prefHeight="46.0" prefWidth="104.0" text="Rednite: xxx%"/>
-                  <Label fx:id="gewinnLabel" prefHeight="46.0" prefWidth="104.0" text="Gewinn: xx,x€"/>
+                  <Label fx:id="renditeLabel" prefHeight="46.0" prefWidth="104.0" text="Rednite: xxx%" />
+                  <Label fx:id="gewinnLabel" prefHeight="46.0" prefWidth="104.0" text="Gewinn: xx,x€" />
                </children>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowSpan="2">
                <children>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                        AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <ListView fx:id="investmentList" editable="true" onEditStart="#viewSelected" prefHeight="300.0"
-                                  prefWidth="200.0"/>
+                        <ListView fx:id="investmentList" editable="true" onEditStart="#viewSelected" prefHeight="300.0" prefWidth="200.0" />
                      </children>
                   </HBox>
                </children>
                <GridPane.margin>
-                  <Insets top="20.0"/>
+                  <Insets top="20.0" />
                </GridPane.margin>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
-                  <Button fx:id="graphButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openGraph"
-                          text="-&gt;"/>
+                  <Button fx:id="graphButton" alignment="TOP_LEFT" mnemonicParsing="false" onAction="#openGraph" text="-&gt;" />
                </children>
             </AnchorPane>
          </children>
